images and startup form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,18 @@
             class="navbar-brand logo text-uppercase"
             href="{{ url_for('index') }}"
           >
-            <img src="../static/images/logo-dark.png" alt="" height="24" />
+            <!-- <img
+              src="../static/images/logo-light.png"
+              class="logo-dark"
+              alt="logo"
+              height="24"
+            /> -->
+            <img
+              src="../static/images/logo-dark.png"
+              class="logo-dark"
+              alt="logo"
+              height="24"
+            />
           </a>
           <button
             class="navbar-toggler"
