--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 %}
 
 <!-- Hero Start -->
-<section class="bg-home section" id="home" style="background-color: #263b5e">
-  <div class="home-overlay"></div>
+<section class="bg-home-4 section" id="home">
+  <div class="bg-overlay-black"></div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
@@ -13,7 +13,7 @@
           We help startups launch their products
         </h1>
 
-        <p class="home-desc text-muted mt-3">
+        <p class="home-desc text-white-50 mt-4">
           Are you ready to accelerate your startup with Ideas Kenya?
         </p>
         <a
