added form fields

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,18 @@
       type="text/css"
     />
     <link href="../static/css/style.min.css" rel="stylesheet" type="text/css" />
+    <style>
+      .form-select{
+        border-color: #dfe9f1!important;
+      }
+      .form-select:focus{
+        box-shadow: none!important;
+        border-color: #dfe9f1!important;
+      }
+      input::placeholder{
+        color: #c6d2db!important;
+      }
+    </style>
   </head>
   <body>
     <!-- navbar -->
