nabar link on startup page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,23 +84,23 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-center mx-auto" id="navbar-navlist">
               <li class="nav-item">
-                <a data-scroll href="#home" class="nav-link">Home</a>
+                <a data-scroll href="/#home" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a data-scroll href="#services" class="nav-link"
+                <a data-scroll href="/#services" class="nav-link"
                   >How it Works</a
                 >
               </li>
               <li class="nav-item">
-                <a data-scroll href="#features" class="nav-link">Works</a>
+                <a data-scroll href="/#features" class="nav-link">Works</a>
               </li>
               <li class="nav-item">
-                <a data-scroll href="#testimonial" class="nav-link"
+                <a data-scroll href="/#testimonial" class="nav-link"
                   >Testimonial</a
                 >
               </li>
               <li class="nav-item">
-                <a data-scroll href="#contact" class="nav-link">Contact</a>
+                <a data-scroll href="/#contact" class="nav-link">Contact</a>
               </li>
             </ul>
             <div class="nav-button">
